--- a/package.json
+++ b/package.json
@@ -3,9 +3,7 @@
   "version": "1.0.0",
   "description": "Learn how to create npm packages",
   "main": "index.js",
-  "bin": {
-    "bin-test": "./bin-test.js"
-  },
+  "bin": "./bin-test.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
